ADD-Header in html e css, resa già responsive

--- a/style.css
+++ b/style.css
@@ -15,3 +15,56 @@ ul, ol, menu {
 body {
   height: 100vh;
 }
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
+
+/* DEBUG */
+header {
+  border-bottom: solid 1px black;
+}
+/******************************HEADER******************************************/
+
+header figure {
+  width: 60px;
+}
+
+header ul li:not(:last-child) {
+  display: none;
+  color: #5B5858;
+}
+
+header ul li:last-child {
+  color: #FF8F00;
+}
+
+/************************MEDIA QUERY******************************************/
+
+ /* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+
+ }
+
+ /* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+
+ }
+
+ /* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+  header ul li:not(:last-child) {
+    display: block;
+  }
+ }
+
+ /* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+
+ }
+
+ /* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) { 
+
+ }
