--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ header figure {
   padding-left: 6px;
 } 
 
+header ul li a {
+  color: currentColor;
+}
+
 header ul li:not(:last-child) {
   display: none;
   color: #5B5858;
@@ -66,6 +70,14 @@ header ul li:last-child {
   gap: 6px;
 }
 
+.sidebar ul li a,
+.sidebar .sidebar-settings a{
+  color: currentColor;
+  text-decoration: none;
+}
+
+
+
 .sidebar ul li i,
 .sidebar .sidebar-settings i{
   font-size: 18px;
@@ -73,6 +85,30 @@ header ul li:last-child {
 
 .sidebar .sidebar-text {
   display: none;
+}
+
+/* parte top contenuto principale */
+
+.main-top {
+  background-color:#1B72E8;
+  color: white;
+}
+
+.main-top .new-student i {
+  border: solid 1px currentColor;
+  border-radius: 4px;
+  line-height: 30px;
+  padding: 0 10px;
+  font-size: 14px;
+}
+
+.main-top .badge {
+  background-color: #165BBA;
+  font-weight: 500;
+}
+
+.main-top .boolean-badges i {
+  font-size: 12px;
 }
 
 /************************MEDIA QUERY******************************************/
@@ -94,6 +130,11 @@ header ul li:last-child {
   header ul li:not(:last-child) {
     display: block;
   }
+
+  header figure {
+    width: 150px;
+  }
+
   /* sidebar */
   .sidebar {
     width: 150px;
