--- a/style.css
+++ b/style.css
@@ -21,10 +21,15 @@ a {
   color: currentColor;
 }
 
+.wrapper {
+  border-radius: 6px;
+}
+
 .title-component {
   border-bottom: solid 1px lightgray;
   padding-left: 10px;
   background-color: #F7F7F7;
+  padding: 10px 6px;
 } 
 
 /******************************HEADER******************************************/
@@ -115,19 +120,62 @@ header ul li:last-child {
 
 /* contenuto principale */
 
+.table {
+  white-space: nowrap;
+}
 
+.table th:first-child {
+  width: 70%;
+}
+
+.table .class-img {
+ display: flex;
+ align-items: center;
+ gap: 8px;
+ font-weight: 500;
+}
+
+.table th > .class-img figure {
+  width: 20px;
+  margin-bottom: 0;
+  display: flex;
+}
+
+.table td i {
+  color: #6C757D;
+}
 
 
 /************************MEDIA QUERY******************************************/
 
+@media (min-width:0px) {
+  /* table */
+  tbody tr td:nth-of-type(1) {
+    display: none;
+  }
+
+  tbody tr td:nth-of-type(2) {
+    display: none;
+  }
+  /* fine table */
+}
+
  /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
 
- }
+}
 
  /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
+  /* table */
+  tbody tr td:nth-of-type(1) {
+    display: table-cell;
+  }
 
+  tbody tr td:nth-of-type(2) {
+    display: table-cell;
+  }
+  /* fine table */
  }
 
  /* Large devices (desktops, 992px and up) */
